--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,34 @@
 [tool.poetry]
 name = "auto-prep"
-version = "0.1.0"
-description = "Automated preprocessing pipeline with LaTeX report generation and visualization"
+version = "0.1.1"
+description = "AutoML with enhanced preprocessing and explainability."
 authors = ["Paweł Pozorski <pozorski.paul@gmail.com>"]
+readme = "README.md"
+license = "GPLv3"
+repository = "https://github.com/Pawlo77/AutoPrep.git"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent",
+]
+include = [
+    "README.md"
+]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.10,<4.0"
 pandas = "^1.4.0"
 numpy = "^1.23.0"
 scikit-learn = "^1.0.2"
 seaborn = "^0.11.2"
-matplotlib = "^3.5.1"
+matplotlib = ">=3.8,<3.9"
 pylatex = "^1.4.1"
 feature-engine = "^1.4.1"
 optuna = "^2.10.0"
 pandas-profiling = "^3.2.0"
+sphinx = "^8.1.3"
+sphinx-rtd-theme = "^3.0.2"
+ghp-import = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
@@ -60,3 +74,6 @@ ignore-init-module-imports = true
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.extras]
+docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
