--- a/.github/workflows/docs_pages.yaml
+++ b/.github/workflows/docs_pages.yaml
@@ -2,9 +2,6 @@ name: Docs2Pages
 on:
   push:
     tags: '*'
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build-docs:
@@ -16,7 +13,7 @@ jobs:
         fetch-depth: 0
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - uses: abatilo/actions-poetry@v2.1.3
 
