--- a/.github/workflows/docs_pages.yaml
+++ b/.github/workflows/docs_pages.yaml
@@ -2,6 +2,9 @@ name: Docs2Pages
 on:
   push:
     tags: '*'
+    branches:
+      - 'dev'
+      - 'master'
   pull_request:
     branches:
       - master
