--- a/.github/workflows/docs_pages.yaml
+++ b/.github/workflows/docs_pages.yaml
@@ -1,36 +1,40 @@
-name: Deploy Sphinx Docs to GitHub Pages
-
+name: Docs2Pages
 on:
   push:
+    tags: '*'
     branches:
-      - main
       - dev
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
-    name: Build and Deploy Docs
+  build-docs:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@master
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-python@v2
+      with:
+        python-version: "3.10"
 
-    - name: Set up Poetry
-      uses: python-poetry/poetry-action@v2
+    - uses: abatilo/actions-poetry@v2.1.3
+      with:
+        python-version: "3.10"
 
-    - name: Install Dependencies
+    - name: install
+      run: poetry lock && poetry install -E amazon -E docs
+
+    - name: Build documentation
       run: |
-        poetry install
+        mkdir gh-pages
+        touch gh-pages/.nojekyll
+        cd docs/
+        poetry run sphinx-build -b html . _build
+        cp -r _build/* ../gh-pages/
 
-    - name: Build Documentation
-      run: |
-        poetry run sphinx-build -b html source/ build/
-
-    - name: Deploy to GitHub Pages
-      run: |
-        poetry run ghp-import -n -p -f build/
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy documentation
+      if: ${{ github.event_name == 'push' }}
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      with:
+        branch: gh-pages
+        folder: gh-pages
