--- a/.github/workflows/docs_pages.yaml
+++ b/.github/workflows/docs_pages.yaml
@@ -20,6 +20,7 @@ jobs:
     - uses: abatilo/actions-poetry@v2.1.3
       with:
         python-version: "3.10"
+        poetry-version: "1.8.5"
 
     - name: install
       run: poetry lock && poetry install -E amazon -E docs
