--- a/.github/workflows/docs_pages.yaml
+++ b/.github/workflows/docs_pages.yaml
@@ -23,7 +23,7 @@ jobs:
         poetry-version: "1.8.5"
 
     - name: install
-      run: poetry lock && poetry install -E amazon -E docs
+      run: poetry install -E docs
 
     - name: Build documentation
       run: |
