--- a/.github/workflows/docs_pages.yaml
+++ b/.github/workflows/docs_pages.yaml
@@ -3,7 +3,10 @@ on:
   push:
     tags: '*'
     branches:
-      - dev
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-docs:
