--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pandas-profiling = "^3.2.0"
 sphinx = "^8.1.3"
 sphinx-rtd-theme = "^3.0.2"
 ghp-import = "^2.1.0"
+humanize = "^4.11.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
