--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ sphinx-rtd-theme = "^3.0.2"
 ghp-import = "^2.1.0"
 umap = "^0.1.1"
 humanize = "^4.11.0"
+tqdm = "^4.67.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
