--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ sphinx-rtd-theme = "^3.0.2"
 ghp-import = "^2.1.0"
 humanize = "^4.11.0"
 tqdm = "^4.67.1"
-umap-learn = "^0.5.7"
+xgboost = "^2.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
