--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ ghp-import = "^2.1.0"
 humanize = "^4.11.0"
 tqdm = "^4.67.1"
 xgboost = "^2.1.3"
+umap-learn = "^0.5.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
