--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,40 @@
-name: Deploy to PyPI with OIDC
+name: Upload Python Package
 
 on:
   push:
-    branches:
-      - main
+    tags:
+    - '[0-9]+.[0-9]+.[0-9]'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: "3.10"
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: false
 
-    - name: Install dependencies
-      run: poetry install
+      - name: Update version (kept at 0.0.0) in pyproject.toml and build
+        run: |
+          poetry version ${{ github.ref_name }}
+          poetry build
 
-    - name: Bump version
-      run: poetry version patch
+      - name: Mint token
+        id: mint
+        uses: tschm/token-mint-action@v1.0.3
 
-    - name: Create Git tag
-      run: |
-        VERSION=$(poetry version -s)
-        git tag "v$VERSION"
-        git push origin "v$VERSION"
-
-    - name: Authenticate with PyPI via OIDC
-      id: pypi-auth
-      uses: pypa/gh-action-pypi-publish@v1.0.1
-      with:
-        user: __token__
-
-    - name: Publish to PyPI
-      run: poetry publish --build --repository pypi
-
-    - name: Notify Success
-      run: echo "Deployment to PyPI completed successfully!"
+      - name: Publish the package with poetry
+        run: |
+          poetry publish -u __token__ -p '${{ steps.mint.outputs.api-token }}'
