--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ humanize = "^4.11.0"
 tqdm = "^4.67.1"
 xgboost = "^2.1.3"
 umap-learn = "^0.5.7"
+shap = "^0.46.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
